@@ -28,7 +28,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar" sourcepath="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/18.0-rc1/guava-18.0-rc1.jar" sourcepath="M2_REPO/com/google/guava/guava/18.0-rc1/guava-18.0-rc1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/18.0/guava-18.0.jar" sourcepath="M2_REPO/com/google/guava/guava/18.0/guava-18.0-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.7/slf4j-log4j12-1.7.7.jar" sourcepath="M2_REPO/org/slf4j/slf4j-log4j12/1.7.7/slf4j-log4j12-1.7.7-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar" sourcepath="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/jcl-over-slf4j/1.7.7/jcl-over-slf4j-1.7.7.jar" sourcepath="M2_REPO/org/slf4j/jcl-over-slf4j/1.7.7/jcl-over-slf4j-1.7.7-sources.jar"/>
@@ -120,16 +120,16 @@
 	<classpathentry kind="var" path="M2_REPO/com/google/code/findbugs/annotations/2.0.1/annotations-2.0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/reflections/reflections-spring/0.9.9-RC1/reflections-spring-0.9.9-RC1.jar" sourcepath="M2_REPO/org/reflections/reflections-spring/0.9.9-RC1/reflections-spring-0.9.9-RC1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/dropbox/core/dropbox-core-sdk/1.7.6/dropbox-core-sdk-1.7.6.jar" sourcepath="M2_REPO/com/dropbox/core/dropbox-core-sdk/1.7.6/dropbox-core-sdk-1.7.6-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-server/7.3.0/vaadin-server-7.3.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-sass-compiler/0.9.10/vaadin-sass-compiler-0.9.10.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-server/7.3.0/vaadin-server-7.3.0.jar" sourcepath="M2_REPO/com/vaadin/vaadin-server/7.3.0/vaadin-server-7.3.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-sass-compiler/0.9.10/vaadin-sass-compiler-0.9.10.jar" sourcepath="M2_REPO/com/vaadin/vaadin-sass-compiler/0.9.10/vaadin-sass-compiler-0.9.10-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar" sourcepath="M2_REPO/org/w3c/css/sac/1.3/sac-1.3-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/flute/flute/1.3.0.gg2/flute-1.3.0.gg2.jar" sourcepath="M2_REPO/com/vaadin/external/flute/flute/1.3.0.gg2/flute-1.3.0.gg2-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-shared/7.3.0/vaadin-shared-7.3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-shared/7.3.0/vaadin-shared-7.3.0.jar" sourcepath="M2_REPO/com/vaadin/vaadin-shared/7.3.0/vaadin-shared-7.3.0-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/streamhtmlparser/streamhtmlparser-jsilver/0.0.10.vaadin1/streamhtmlparser-jsilver-0.0.10.vaadin1.jar" sourcepath="M2_REPO/com/vaadin/external/streamhtmlparser/streamhtmlparser-jsilver/0.0.10.vaadin1/streamhtmlparser-jsilver-0.0.10.vaadin1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/google/guava/16.0.1.vaadin1/guava-16.0.1.vaadin1.jar" sourcepath="M2_REPO/com/vaadin/external/google/guava/16.0.1.vaadin1/guava-16.0.1.vaadin1-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/json/json/0.0.20080701/json-0.0.20080701.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/json/json/0.0.20080701/json-0.0.20080701.jar" sourcepath="M2_REPO/com/vaadin/external/json/json/0.0.20080701/json-0.0.20080701-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/addon/vaadin-touchkit-agpl/4.0.0.rc1/vaadin-touchkit-agpl-4.0.0.rc1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-client/7.3.0/vaadin-client-7.3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-client/7.3.0/vaadin-client-7.3.0.jar" sourcepath="M2_REPO/com/vaadin/vaadin-client/7.3.0/vaadin-client-7.3.0-sources.jar"/>
 	<classpathentry kind="src" path="/mycollab-reporting"/>
 	<classpathentry kind="var" path="M2_REPO/net/sourceforge/dynamicreports/dynamicreports-core/3.2.1/dynamicreports-core-3.2.1.jar" sourcepath="M2_REPO/net/sourceforge/dynamicreports/dynamicreports-core/3.2.1/dynamicreports-core-3.2.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/net/sf/jasperreports/jasperreports/5.5.1/jasperreports-5.5.1.jar" sourcepath="M2_REPO/net/sf/jasperreports/jasperreports/5.5.1/jasperreports-5.5.1-sources.jar"/>
@@ -175,7 +175,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/vaadin/addons/tokenfield/7.0.1/tokenfield-7.0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/vaadin/addons/stylecalendar/2.1.0/stylecalendar-2.1.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/vaadin/addon/easyuploads/7.0.3-SNAPSHOT/easyuploads-7.0.3-SNAPSHOT.jar" sourcepath="M2_REPO/org/vaadin/addon/easyuploads/7.0.3-SNAPSHOT/easyuploads-7.0.3-SNAPSHOT-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/vaadin/addons/contextmenu/4.4.0/contextmenu-4.4.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/vaadin/addons/contextmenu/4.5.0/contextmenu-4.5.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/lexaden/components/breadcrumb/1.7.3/breadcrumb-1.7.3.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/vaadin/addons/listbuilder/0.7.3.v7/listbuilder-0.7.3.v7.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/esofthead/vaadin/popupbutton/1.0.0-SNAPSHOT/popupbutton-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/com/esofthead/vaadin/popupbutton/1.0.0-SNAPSHOT/popupbutton-1.0.0-SNAPSHOT-sources.jar"/>
